# fast-median-filtering

./: .gitignore  README.md  main.py  pyproject.toml  steps.md
manimation/: htfilter.py  median_filter_animation.py  pyproject.toml
src/: helloworldcuda.cu  testcuda.cu  verify_opencv
src/cpu/: compileflags.txt  cv_blur.cpp  h_blur.cpp  h_blur2.cpp  h_blur_3.cpp  h_blur_a2_2.cpp  h_blur_avx2.cpp  t_blur  t_blur.cpp  testcv.cpp
src/gpu/: a.out  hello  notes.md.save  testcuda.cu
src/main/: CMakeLists.txt  main.cu  median_filter.cuh  median_filter_EXP.cuh
src/main/old/: CMakeLists.txt  main.cpp  median_filter.cuh
